ci/traefik-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aergia-backend
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: aergia-x-lagoon@kubernetescrd
spec:
  defaultBackend:
    service:
      name: aergia-backend
      port:
        number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: x-lagoon
spec:
  headers:
    customResponseHeaders:
      X-Lagoon: ci-local-control-k8s>traefik>default-backend
